@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11404 2012/08/03 13:34:27 obache Exp $
+$NetBSD: TODO,v 1.11405 2012/08/03 13:51:40 adam Exp $
 
 Suggested new packages
 ======================
@@ -943,6 +943,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o notification-daemon-0.7.0
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
+	o ntop-5.0
 	o ntp-4.2.6p3
 	o ntp4-4.2.6p5
 	o nulib2-220
