@@ -1,17 +1,12 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2012/03/15 09:45:28 ryoon Exp $
+@comment $NetBSD: PLIST,v 1.2 2012/04/29 20:36:30 ryoon Exp $
 bin/thunderbird10
-${PLIST.jit}include/thunderbird10/Allocator.h
-${PLIST.jit}include/thunderbird10/Assembler.h
 include/thunderbird10/AtkSocketAccessible.h
 include/thunderbird10/BasicLayers.h
 include/thunderbird10/CheckedInt.h
-${PLIST.jit}include/thunderbird10/CodeAlloc.h
-${PLIST.jit}include/thunderbird10/Containers.h
 include/thunderbird10/CustomQS_Canvas2D.h
 include/thunderbird10/CustomQS_WebGL.h
 include/thunderbird10/EGLUtils.h
 include/thunderbird10/ForceDiscreteGPUHelperCGL.h
-${PLIST.jit}include/thunderbird10/Fragmento.h
 include/thunderbird10/FrameLayerBuilder.h
 include/thunderbird10/FramePropertyTable.h
 include/thunderbird10/GLContext.h
@@ -26,34 +21,25 @@ include/thunderbird10/IPC/nsGUIEventIPC.h
 include/thunderbird10/ImageErrors.h
 include/thunderbird10/ImageLayers.h
 include/thunderbird10/ImageLogging.h
-${PLIST.jit}include/thunderbird10/LIR.h
-${PLIST.jit}include/thunderbird10/LIRopcode.tbl
 include/thunderbird10/LayerManagerOGL.h
 include/thunderbird10/LayerManagerOGLProgram.h
 include/thunderbird10/Layers.h
 include/thunderbird10/MailNewsTypes.h
 include/thunderbird10/MailNewsTypes2.h
 include/thunderbird10/NSReg.h
-${PLIST.jit}include/thunderbird10/Native.h
-${PLIST.jit}include/thunderbird10/NativeCommon.h
-${PLIST.jit}include/thunderbird10/Native${NANOJIT_ARCH}.h
 include/thunderbird10/PCOMContentPermissionRequestChild.h
 include/thunderbird10/PPrefTuple.h
 include/thunderbird10/PrefTuple.h
 include/thunderbird10/ReadbackLayer.h
-${PLIST.jit}include/thunderbird10/RegAlloc.h
 include/thunderbird10/TabMessageUtils.h
-${PLIST.jit}include/thunderbird10/VMPI.h
 include/thunderbird10/VerReg.h
 include/thunderbird10/VideoUtils.h
-${PLIST.jit}include/thunderbird10/Writer.h
 include/thunderbird10/a11yGeneric.h
 include/thunderbird10/amIInstallTrigger.h
 include/thunderbird10/amIWebInstallListener.h
 include/thunderbird10/amIWebInstaller.h
 include/thunderbird10/angle/ResourceLimits.h
 include/thunderbird10/angle/ShaderLang.h
-${PLIST.jit}include/thunderbird10/avmplus.h
 include/thunderbird10/domstubs.h
 include/thunderbird10/expat.h
 include/thunderbird10/expat_config.h
@@ -139,7 +125,6 @@ include/thunderbird10/jsalloc.h
 include/thunderbird10/jsapi.h
 include/thunderbird10/jsatom.h
 include/thunderbird10/jsautokw.h
-${PLIST.jit}include/thunderbird10/jsbuiltins.h
 include/thunderbird10/jscell.h
 include/thunderbird10/jsclist.h
 include/thunderbird10/jsclone.h
@@ -428,13 +413,10 @@ include/thunderbird10/mozilla/throw_gcc.h
 include/thunderbird10/mozilla/unused.h
 include/thunderbird10/mozpngconf.h
 include/thunderbird10/msgCore.h
-${PLIST.jit}include/thunderbird10/nanojit.h
 include/thunderbird10/necko-config.h
 include/thunderbird10/nestegg/nestegg-stdint.h
 include/thunderbird10/nestegg/nestegg.h
 include/thunderbird10/netCore.h
-${PLIST.jit}include/thunderbird10/njconfig.h
-${PLIST.jit}include/thunderbird10/njcpudetect.h
 include/thunderbird10/npapi.h
 include/thunderbird10/npfunctions.h
 include/thunderbird10/npruntime.h
