@@ -1,23 +1,13 @@
-# $NetBSD: options.mk,v 1.10 2012/01/07 23:37:51 sbd Exp $
+# $NetBSD: options.mk,v 1.1.1.1 2012/03/15 09:45:29 ryoon Exp $
 
 PKG_OPTIONS_VAR=	PKG_OPTIONS.thunderbird
 PKG_SUPPORTED_OPTIONS=	debug mozilla-jemalloc gnome official-mozilla-branding mozilla-lightning mozilla-enigmail
 PKG_SUGGESTED_OPTIONS=	mozilla-lightning
 
-PLIST_VARS+=		branding nobranding debug gnome jemalloc jit
+PLIST_VARS+=		branding nobranding debug gnome jemalloc
 
 .if ${OPSYS} == "Linux" || ${OPSYS} == "SunOS"
 PKG_SUGGESTED_OPTIONS+=	mozilla-jemalloc
-.endif
-
-.if !empty(MACHINE_ARCH:Mi386) || !empty(MACHINE_ARCH:Msparc) || \
-	!empty(MACHINE_ARCH:Marm) || !empty(MACHINE_ARCH:Mx86_64)
-PKG_SUPPORTED_OPTIONS+=	mozilla-jit
-PKG_SUGGESTED_OPTIONS+=	mozilla-jit
-NANOJIT_ARCH.i386=	i386
-NANOJIT_ARCH.arm=	ARM
-NANOJIT_ARCH.sparc=	Sparc
-NANOJIT_ARCH.x86_64=	X64
 .endif
 
 .include "../../mk/bsd.options.mk"
@@ -45,14 +35,6 @@ PLIST.debug=		yes
 .else
 CONFIGURE_ARGS+=	--disable-debug --disable-debug-symbols
 CONFIGURE_ARGS+=	--enable-install-strip
-.endif
-
-.if !empty(PKG_OPTIONS:Mmozilla-jit)
-PLIST.jit=		yes
-PLIST_SUBST+=		NANOJIT_ARCH=${NANOJIT_ARCH.${MACHINE_ARCH}}
-CONFIGURE_ARGS+=	--enable-tracejit
-.else
-CONFIGURE_ARGS+=	--disable-tracejit
 .endif
 
 .if !empty(PKG_OPTIONS:Mmozilla-lightning)
