@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2459 2012/08/03 13:08:41 obache Exp $
+$NetBSD: CHANGES-2012,v 1.2460 2012/08/03 13:51:39 adam Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3802,3 +3802,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated textproc/grep to 2.13 [adam 2012-08-03]
 	Updated databases/mysql55-client to 5.5.27 [adam 2012-08-03]
 	Updated databases/mysql55-server to 5.5.27 [adam 2012-08-03]
+	Updated mail/thunderbird10 to 10.0.6 [ryoon 2012-08-04]
